1477 fix scrollbar try 2

--- a/src/styles/mixins/scrollable-mixin.less
+++ b/src/styles/mixins/scrollable-mixin.less
@@ -1,6 +1,11 @@
 .scrollable(@scrollbar-color) {
   overflow-y: auto;
 
+  @supports not selector(::-webkit-scrollbar) {
+    scrollbar-width: thin;
+    scrollbar-color: @scrollbar-color  transparent;
+  }
+
   &::-webkit-scrollbar {
     width: 3px;
     height: 3px;
